service-config.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-docker-2
spec:
  selector:
    deploymentconfig: simple-webapp-docker-2
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
