route-config.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: 'true'
  creationTimestamp: '2020-04-05T12:48:59Z'
  labels:
    app: simple-webapp-color
  name: simple-webapp-color
  namespace: simple-webapp-color
  resourceVersion: '444802'
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/simple-webapp-color/routes/simple-webapp-color
  uid: d203ae97-773b-11ea-ad64-0800276f0c49
spec:
  host: simple-webapp-color-simple-webapp-color.192.168.99.105.nip.io
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: simple-webapp-color
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2020-04-05T12:49:00Z'
          status: 'True'
          type: Admitted
      host: simple-webapp-color-simple-webapp-color.192.168.99.105.nip.io
      routerName: router
      wildcardPolicy: None
